--- a/margin_register/src/main/res/values/strings.xml
+++ b/margin_register/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">margin_register</string>
+    <string name="register_app_name">margin_register</string>
 </resources>
